<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="io.github.zeyomir.cv.overview.CvOverviewViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeToRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:refreshing="@{viewModel.showLoading}">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true">

                <LinearLayout
                    style="@style/PageContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical"
                    android:visibility="@{!viewModel.showError &amp;&amp; !viewModel.showLoading}">

                    <io.github.zeyomir.cv.base.view.ClippingImageView
                        android:id="@+id/photo"
                        android:layout_width="@dimen/photoSize"
                        android:layout_height="@dimen/photoSize"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin8"
                        android:background="@drawable/circular_photo_mask"
                        android:visibility="@{viewModel.photoUrl != null}"
                        app:imageUrl="@{viewModel.photoUrl}" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/name"
                        style="@style/Headline1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin8"
                        android:gravity="center_horizontal"
                        android:text="@{viewModel.name}"
                        tools:text="John Doe" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/summary"
                        style="@style/BodyTextSmallRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin8"
                        android:paddingBottom="@dimen/margin8"
                        android:gravity="center_horizontal"
                        android:text="@{viewModel.summary}"
                        app:layout_constraintBottom_toBottomOf="@id/photo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/photo"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Description" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/keywordseHeadline"
                        style="@style/Headline2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin8"
                        android:text="@string/keywords"
                        android:visibility="@{viewModel.keywords.size() > 0}" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/keywords"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin8"
                        android:visibility="@{viewModel.keywords.size() > 0}"
                        app:itemBinding="@{viewModel.chipsBinding}"
                        app:items="@{viewModel.keywords}"
                        tools:itemCount="1"
                        tools:listitem="@layout/item_chip" />

                    <io.github.zeyomir.cv.base.view.InterceptTouchLinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="@{viewModel.moreExperienceAvailable}"
                        android:descendantFocusability="blocksDescendants"
                        android:focusable="@{viewModel.moreExperienceAvailable}"
                        android:foreground="?android:selectableItemBackground"
                        android:onClick="@{() -> viewModel.showExperienceCommand()}"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/margin8"
                        android:paddingBottom="@dimen/margin8">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/experienceHeadline"
                            style="@style/Headline2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin8"
                            android:text="@string/experience" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/experience"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:itemBinding="@{viewModel.experienceBinding}"
                            app:items="@{viewModel.experience}"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:itemCount="1"
                            tools:listitem="@layout/item_experience" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/experienceSeeMore"
                            style="@style/BodyTextSmallRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin8"
                            android:gravity="end"
                            android:text="@string/seeMore"
                            android:visibility="@{viewModel.moreExperienceAvailable}" />
                    </io.github.zeyomir.cv.base.view.InterceptTouchLinearLayout>

                    <io.github.zeyomir.cv.base.view.InterceptTouchLinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="@{viewModel.moreEducationAvailable}"
                        android:descendantFocusability="blocksDescendants"
                        android:focusable="@{viewModel.moreEducationAvailable}"
                        android:foreground="?android:selectableItemBackground"
                        android:onClick="@{() -> viewModel.showEducationCommand()}"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/margin8"
                        android:paddingBottom="@dimen/margin8">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/educationHeadline"
                            style="@style/Headline2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin8"
                            android:text="@string/education" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/education"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:itemBinding="@{viewModel.educationBinding}"
                            app:items="@{viewModel.education}"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:itemCount="1"
                            tools:listitem="@layout/item_education" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/educationSeeMore"
                            style="@style/BodyTextSmallRegular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin8"
                            android:gravity="end"
                            android:text="@string/seeMore"
                            android:visibility="@{viewModel.moreEducationAvailable}" />
                    </io.github.zeyomir.cv.base.view.InterceptTouchLinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:selectableItemBackground"
                        android:onClick="@{() -> viewModel.showCertificatesCommand()}"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/margin8"
                        android:paddingBottom="@dimen/margin8"
                        android:visibility="@{viewModel.certificates > 0}">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/certificatesHeadline"
                            style="@style/Headline2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/certificates" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/certificates"
                            style="@style/BodyTextBold"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/badge"
                            android:backgroundTint="@color/green"
                            android:gravity="center_vertical"
                            android:paddingStart="@dimen/margin16"
                            android:paddingEnd="@dimen/margin16"
                            android:text="@{String.valueOf(viewModel.certificates)}"
                            android:textColor="@color/white"
                            tools:text="7" />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/languagesHeadline"
                        style="@style/Headline2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin8"
                        android:text="@string/languages"
                        android:visibility="@{viewModel.languages.size() > 0}" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/languages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin8"
                        android:paddingBottom="@dimen/margin8"
                        android:visibility="@{viewModel.languages.size() > 0}"
                        app:itemBinding="@{viewModel.languagesBinding}"
                        app:items="@{viewModel.languages}"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="2"
                        tools:listitem="@layout/item_language" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/interestsHeadline"
                        style="@style/Headline2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/margin8"
                        android:text="@string/interests"
                        android:visibility="@{viewModel.interests.size() > 0}" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/interests"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin8"
                        android:paddingBottom="@dimen/margin8"
                        android:visibility="@{viewModel.interests.size() > 0}"
                        app:itemBinding="@{viewModel.chipsBinding}"
                        app:items="@{viewModel.interests}"
                        tools:itemCount="1"
                        tools:listitem="@layout/item_chip" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/linksHeadline"
                        style="@style/Headline2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/margin8"
                        android:text="@string/links"
                        android:visibility="@{viewModel.links.size() > 0}" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/links"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin8"
                        android:paddingBottom="@dimen/margin8"
                        android:visibility="@{viewModel.links.size() > 0}"
                        app:itemBinding="@{viewModel.linksBinding}"
                        app:items="@{viewModel.links}"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="3"
                        tools:listitem="@layout/item_link" />
                </LinearLayout>

                <include
                    layout="@layout/view_error"
                    app:viewModel="@{viewModel.errorViewModel}"
                    tools:visibility="gone" />
            </FrameLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>
